# gn-ftp-magento

./: .env.exemple  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Interfaces/TGN/MAG/: EDIEE1124121314533225.TXT  EDIEE1124121315153625.TXT
app/: main.py
app/config/: settings.py
app/database/: manager.py
app/ftp/: manager.py
app/scheduler/: scheduler.py
app/services/: file_handler.py  stock_sync.py
