[project]
name = "ftp-magento"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "José Roberto Ferreira" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "paramiko>=4.0.0",
    "pymssql>=2.3.7",
    "python-decouple>=3.8",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.42",
]

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
